--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="col-lg-6">
                         <div class="text-center my-5">
                             <h1 class="display-5 fw-bolder text-white mb-2">BDC Exchange</h1>
-                            <p class="lead text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
+                            <p class="lead text-white-50 mb-4">Welcome to BDC Exchange, where business growth and biodiversity conservation converge through the innovative concept of biodiversity credits.</p>
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
                                 <a class="btn btn-outline-light btn-lg px-4" href="#!">Learn More</a>
                             </div>
@@ -52,28 +52,22 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
                         <h2 class="h4 fw-bolder">Understanding Biodiversity Credits</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                        <p>Biodiversity Credits are an innovative solution addressing the urgent need to protect our planet's diverse ecosystems. When companies cause unavoidable harm to biodiversity, these credits allow them to compensate for their impact by investing in conservation projects elsewhere. By purchasing and retiring these credits, businesses demonstrate their commitment to environmental stewardship, aligning with sustainable development goals, and meeting increasingly stringent regulatory requirements. BDC Exchange offers an accessible, transparent platform to trade these credits, ensuring a fair process that benefits both businesses and our shared environment.</p>
                         <a class="text-decoration-none" href="#!">
-                            Call to action
-                            <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
-                        <h2 class="h4 fw-bolder">Featured title</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                        <h2 class="h4 fw-bolder">Promoting Transparency and Fair Trade</h2>
+                        <p>Trust and fairness form the core of our platform. We ensure that every transaction of biodiversity credits is transparent, fostering a fair marketplace where the value of biodiversity is recognized and respected. Our user-friendly interface and transparent pricing mechanism make it easy for businesses to understand, participate in, and benefit from the biodiversity credit market.</p>
                         <a class="text-decoration-none" href="#!">
-                            Call to action
-                            <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
                     <div class="col-lg-4">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                        <h2 class="h4 fw-bolder">Featured title</h2>
-                        <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+                        <h2 class="h4 fw-bolder">Enabling Sustainable Growth</h2>
+                        <p>With BDC Exchange, sustainable growth is more than a buzzword—it's a reality. By promoting the trade of biodiversity credits, we enable businesses to grow while preserving our planet's precious biodiversity. This approach allows companies to align their growth strategies with global sustainability goals, setting new standards for corporate responsibility and stewardship of our shared environment.</p>
                         <a class="text-decoration-none" href="#!">
-                            Call to action
-                            <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
                 </div>
