--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
                         <h2 class="h4 fw-bolder">Understanding Biodiversity Credits</h2>
-                        <p>Biodiversity Credits are an innovative solution addressing the urgent need to protect our planet's diverse ecosystems. When companies cause unavoidable harm to biodiversity, these credits allow them to compensate for their impact by investing in conservation projects elsewhere. By purchasing and retiring these credits, businesses demonstrate their commitment to environmental stewardship, aligning with sustainable development goals, and meeting increasingly stringent regulatory requirements. BDC Exchange offers an accessible, transparent platform to trade these credits, ensuring a fair process that benefits both businesses and our shared environment.</p>
+                        <p>Biodiversity Credits are a novel solution to preserve global ecosystems. They allow businesses to offset unavoidable biodiversity impacts by supporting conservation projects. Purchasing these credits demonstrates a commitment to environmental stewardship. The BDC Exchange provides a transparent platform for trading these credits, benefiting both businesses and our environment.</p>
                         <a class="text-decoration-none" href="#!">
                         </a>
                     </div>
